# image_filtering_and_edge_detection

./: .gitignore  README.md
Backend/: CMakeLists.txt  adding_noise.cpp  edge_detection.cpp  enhance_image.cpp  filter_noise.cpp  frequency_filters.cpp  generate_hybrid.cpp  get_intensity_data.cpp  main_binding.cpp
Backend/cpp_pyqt_example/: CMakeLists.txt
Frontend/: front.py
